header na página

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
+<header>
+    <h2>Bem-vindo à calculadora</h2>
+</header>
 <body>
     <div id="calculadora">
         <h2>Calculadora de IMC</h2>
